# rust-

./: .gitignore  Cargo.toml  README.md
config/: mcp.example.json
crates/agent-core/: Cargo.toml
crates/agent-core/src/: design.rs  lib.rs  mcp.rs  orchestrator.rs  repair.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/eda-runner/: Cargo.toml
crates/eda-runner/src/: lib.rs  tools.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: main.rs  state.rs
crates/web-api/src/routes/: mod.rs
crates/web-api/src/static/: index.html
docs/: api.md  architecture.md  development.md  mcp.md  phases.md  security.md
scripts/: setup-wsl2-eda.ps1
