[workspace]
members = [
    "crates/domain",
    "crates/eda-runner",
    "crates/agent-core",
    "crates/web-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.local/chip-agent-system"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rig = { package = "rig-core", version = "0.36", features = ["derive", "rmcp"] }
rmcp = { version = "1.6", features = ["client", "server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
